2000-10-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableCompositeImage): Renamed from
 	DrawableImage.
	(DrawableTextDecoration): Renamed form DrawableDecoration.
	(all-classes): Complete re-write to write the drawing command to a
 	stream when draw() is invoked rather than at object construction
 	time. This may be somewhat slower for individual draw operations
 	but but should be at least as fast for lists of drawing commands,
 	and is more flexible going into the future. Drawable classes now
 	inherit from DrawableBase but are passed into STL lists and Image
 	draw() methods via the surrogate class Drawable.  The upshot of
 	all this is that the existing published API has not been altered
 	but things work much differently under the covers.

2000-10-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableStrokeColor): Renamed from DrawableStroke
	(DrawableFillColor): Renamed from DrawableFill
	(DrawableRotation): New class to influence object rotation.
	(DrawableScaling): New class to influence object scaling.
	(DrawableTranslation): New class to influence object translation.

2000-10-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (DrawableAffine): New class to influence object
 	scaling, rotation, and translation (as defined by SVG XML).
	(DrawableAngle): New class to influence drawing angle.
	(DrawableDecoration): New class to influence text decoration such
 	as underline.
	(DrawableFill): New class to set object filling color.
	(DrawableFillOpacity): New class to set opacity to use when
 	filling object.
	(DrawableFont::): New class to set font.
	(DrawableGravity): New class to set text placement gravity.
	(DrawablePointSize): New class to set font point size.
	(DrawableStroke): New class to set drawing stroke color.
	(DrawableStrokeOpacity): New class to set drawing stroke opacity.
	(DrawableStrokeWidth): New class to set drawing stroke width.
